--- a/index.html
+++ b/index.html
@@ -224,7 +224,21 @@ figure figcaption p {
 .gallery figure .buttons {
   left: 40%;
 }
-	
+
+.map-responsive{
+overflow:hidden;
+padding-bottom:56.25%;
+position:relative;
+height:0;
+}
+
+.map-responsive iframe{
+left:0;
+top:0;
+height:100%;
+width:100%;
+position:absolute;
+}
 </style>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300" style="background-color: #f0e1e4">
 	
@@ -621,7 +635,11 @@ figure figcaption p {
 			<h5>Sincerely appreciate your contact</h5>
           </div>
         </div>
-		
+	<div class="align-self-stretch box text-center ftco-animate" valign="top" style="padding-bottom: 3.5rem !important;">
+		<div class="map-responsive">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3873.7856449853266!2d100.49362389048282!3d13.851901670490964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29ba58feb5487%3A0xc5e04426ea4c2a64!2s172%2F8%20Nonthaburi%20Bypath%20Rd%208%2C%20Tambon%20Suan%20Yai%2C%20Amphoe%20Mueang%20Nonthaburi%2C%20Chang%20Wat%20Nonthaburi%2011000!5e0!3m2!1sen!2sth!4v1659976352293!5m2!1sen!2sth" width="600" height="450" style="border:4px solid #c2a49d; padding:1em; border-radius: 25px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		</div>
+	</div>	
         <div class="row d-flex contact-info mb-5">
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
