--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@ position:absolute;
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Website</h3>
-	            <p><a href="#https://surasamoonsan.github.io/SurasaPortfolio2022" style="color:#a68f8a"><u>My Websit Portfolio</u></a></p>
+	            <p><a href="#https://surasamoonsan.github.io/2022-Surasa-Website/" style="color:#a68f8a"><u>My Websit Portfolio</u></a></p>
 	          </div>
           </div>
         </div>
