--- a/index.html
+++ b/index.html
@@ -274,7 +274,13 @@ position:absolute;
 	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_11.png);">
 	          		<div class="overlay"></div>
 	          	</div>
-				
+				<div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+					<div class="text Greeting-wrap">
+						<span class="subheading">Hello!</span>
+						<span style="width:100%; text-align: center;"><h1 class="mb-4 mt-3"><i class="icon-quote-left" style="font-size: 0.3em; position:absolute"> </i>&nbsp;&nbsp;I'm <span>Surasa Moonsan</span><i class="icon-quote-right" style="font-size: 0.3em; position:absolute;"></i></h1></span>
+						<h3 class="mb-4" style="color:#a68f8a; text-align: center;">A Website Interface Designer.</h3>
+					</div>
+				</div>
 	        	</div>
 	        </div>
 	      </div>
@@ -286,7 +292,12 @@ position:absolute;
 	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_222.png);">
 	          		<div class="overlay"></div>
 	          	</div>
-		          
+		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+		          	<div class="text Greeting-wrap">
+		          		<span class="subheading">Favorite Quote:</span>
+						<span style="width:100%; text-align: center;"><h1><i class="icon-quote-left" style="font-size: 0.3em; position:absolute"> </i>&nbsp;&nbsp;<span>Life</span><i class="icon-quote-right" style="font-size: 0.3em; position:absolute;"></i><h3 class="mb-4" >is not a problem to be solved<br><span>, but a reality to be experienced.</h3></h1></span>
+		            </div>
+		          </div>
 	        	</div>
 	        </div>
 	      </div>
@@ -766,7 +777,13 @@ position:absolute;
   <script src="plugins/slider/slider.js"></script>
   <script src="plugins/facncybox/jquery.fancybox.js"></script>
   <script>
-
+	const navLinks = document.querySelectorAll('.nav-item')
+	const menuToggle = document.getElementById('ftco-nav')
+	const bsCollapse = new bootstrap.Collapse(menuToggle, {toggle:false})
+	navLinks.forEach((l) => {
+		l.addEventListener('click', () => { bsCollapse.toggle() })
+	})
+		
 	//for imahe carousel
 	jQuery(document).ready(function(){
 	"use strict";
