--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
 
   </head>
   <style>
-	html {
-	scroll-behavior: smooth;
-	}
-
 	.lightbrown{
 	color:#a68f8a;
 	}
@@ -265,8 +261,79 @@ position:absolute;
 			</div>
 			</div>
 		</nav>
-	  
-    
+	  <section id="home-section" class="hero">
+		  <div class="home-slider  owl-carousel">
+	      <div class="slider-item ">
+	      	<div class="overlay"></div>
+	        <div class="container">
+	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_11.png);">
+	          		<div class="overlay"></div>
+	          	</div>
+				<div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+					<div class="text Greeting-wrap">
+						<span class="subheading">Hello!</span>
+						<span style="width:100%; text-align: center;"><h1 class="mb-4 mt-3"><i class="icon-quote-left" style="font-size: 0.3em; position:absolute"> </i>&nbsp;&nbsp;I'm <span>Surasa Moonsan</span><i class="icon-quote-right" style="font-size: 0.3em; position:absolute;"></i></h1></span>
+						<h3 class="mb-4" style="color:#a68f8a; text-align: center;">A Website Interface Designer.</h3>
+					</div>
+				</div>
+	        	</div>
+	        </div>
+	      </div>
+
+	      <div class="slider-item">
+	      	<div class="overlay"></div>
+	        <div class="container">
+	          <div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_222.png);">
+	          		<div class="overlay"></div>
+	          	</div>
+		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+		          	<div class="text Greeting-wrap">
+		          		<span class="subheading">Favorite Quote:</span>
+						<span style="width:100%; text-align: center;"><h1><i class="icon-quote-left" style="font-size: 0.3em; position:absolute"> </i>&nbsp;&nbsp;<span>Life</span><i class="icon-quote-right" style="font-size: 0.3em; position:absolute;"></i><h3 class="mb-4" >is not a problem to be solved<br><span>, but a reality to be experienced.</h3></h1></span>
+		            </div>
+		          </div>
+	        	</div>
+	        </div>
+	      </div>
+	    </div>
+    </section>
+    <section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
+    	<div class="container"  style="padding-top: 4em;">
+			<div class="row d-flex">
+				<div class="col-md-6 col-lg-5 d-flex">
+					<div class="img-about img d-flex align-items-stretch">
+						<div class="overlay">
+							<img src="images/profile.jpg" class="img d-flex align-self-stretch align-items-center img-radius">
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
+					<div class="row justify-content-start pb-3">
+						<div class="col-md-12 heading-section ftco-animate">
+							<h1 class="big">About</h1>
+							<h2 class="mb-4">About Me</h2>
+							<h5>2 years experienced as a website interface designer.<br>I can design the phototype and also coding the website.</h5>
+							<ul class="about-info mt-4 px-md-0 px-2">
+							<li class="d-flex"><span>Name:</span> <span>Surasa Moonsan</span></li>
+							<li class="d-flex"><span>Date of birth:</span> <span>December 29, 1994 (27 years old)</span></li>
+							<li class="d-flex"><span>Address:</span> <span>Suan Yai, Mueang Nonthaburi District, Nonthaburi, Thailand.</span></li>
+							<li class="d-flex"><span>Zip code:</span> <span>11000</span></li>
+							<li class="d-flex"><span>Email:</span> <span>surasamoonsan@gmail.com</span></li>
+							<li class="d-flex"><span>Phone: </span> <span>080-392-6351</span></li>
+							</ul>
+						</div>
+					</div>
+					<div class="counter-wrap ftco-animate d-flex mt-md-3">
+						<div class="text">
+						<p><a href="https://drive.google.com/drive/folders/1Oca11gwu1NgFKAssYM4m6wpv1vFTb2ke?usp=sharing" target="_blank" class="btn btn-primary py-3 px-3" >Download CV</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+    	</div>
+    </section>
 	<section class="ftco-section" id="goal-section">
     	<div class="container">
     		<div class="row justify-content-center py-5 mt-5">
