--- a/index.html
+++ b/index.html
@@ -773,7 +773,13 @@ position:absolute;
   <script src="plugins/slider/slider.js"></script>
   <script src="plugins/facncybox/jquery.fancybox.js"></script>
   <script>
-		
+	const navLinks = document.querySelectorAll('.nav-item')
+	const menuToggle = document.getElementById('ftco-nav')
+	const bsCollapse = new bootstrap.Collapse(menuToggle, {toggle:false})
+	navLinks.forEach((l) => {
+		l.addEventListener('click', () => { bsCollapse.toggle() })
+	})
+						    
 	//for imahe carousel
 	jQuery(document).ready(function(){
 	"use strict";
