--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ position:absolute;
 </style>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300" style="background-color: #f0e1e4">
 		<header class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
-			<div class="container">
+			<div class="container" style="background-color: purple;">
 				<div><a class="navbar-brand" href="index.html" style="letter-spacing:2px">&nbsp;&nbsp;&nbsp;Surasa</a></div>
 				<button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="oi oi-menu"></span> Menu
@@ -261,7 +261,7 @@ position:absolute;
 				</div>
 			</div>
 		</header>
-	  <section id="home-section" class="hero">
+	  <section id="home-section" class="hero" style="background-color: #fc8395;">
 		  <div class="home-slider  owl-carousel">
 	      <div class="slider-item ">
 	      	<div class="overlay"></div>
