--- a/index.html
+++ b/index.html
@@ -262,25 +262,8 @@ position:absolute;
 			</div>
 		</header>
 	<section id="home-section" class="hero" style="background-color: #fc8395;">
-		<div class="home-slider  owl-carousel">
-			<div class="slider-item ">
-				<div class="container">
-					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-						<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_11.png);">
-						</div>
-						
-					</div>
-				</div>
-			</div>
-			<div class="slider-item">
-				<div class="container">
-					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-						<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_222.png);">
-						</div>
-						
-					</div>
-				</div>
-			</div>
+		<div class="home-slider owl-carousel">
+			<div style="color:white">TEST1</div>
 		</div>
     </section>
     <section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
