--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@ position:absolute;
 		<section id="home-section" class="hero">
 			<div class="container">
 				<div class="row align-items-center">
-					<div class="col-lg-6" style="height:40vh; padding-top: 5vh;">
-						<div style="background-color: rgba(255, 235, 205, 0.815); border-radius:20px; padding:3em 0em;">
+					<div class="col-lg-6" style="height:45vh; padding-top: 4vh;">
+						<div style="background-color: rgba(255, 235, 205, 0.5); border:0.5em solid #a68f8a; border-radius:20px; padding:3em 0em;">
 							<h5>&nbsp;&nbsp;&nbsp;&nbsp;<span style="padding: 4px 12px; background-color:#fc8395; color:white;">HELLO ! <span class="icon-heart" style="color:white"></span></span></h5>
 							<div class="heading-section">
 								<h2>&nbsp;&nbsp;&nbsp;I'm </h2>
