--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@ position:absolute;
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-4">Address</h3>
-	            <p>บ้านเลขที่ 172 หมู่2<br>ซอยนนทบุรี2 ตำบลสวนใหญ่ อำเภอเมืองนนทบุรี<br>จังหวัดนนทบุรี 11000</p>
+	            <p style="color:#a68f8a">บ้านเลขที่ 172 หมู่2<br>ซอยนนทบุรี2 ตำบลสวนใหญ่ อำเภอเมืองนนทบุรี<br>จังหวัดนนทบุรี 11000</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -673,7 +673,7 @@ position:absolute;
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p>080-392-6351</p>
+	            <p  style="color:#a68f8a">080-392-6351</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -719,7 +719,7 @@ position:absolute;
 	              <ul>
 	                <li><span class="icon icon-map-marker" style="color:white"></span><span class="text">บ้านเลขที่ 172 หมู่2 ซอยนนทบุรี2 ตำบลสวนใหญ่ อำเภอเมืองนนทบุรี จังหวัดนนทบุรี 11000</span></li>
 	                <li><a href="#"><span class="icon icon-phone" style="color:white"></span><span class="text">080-392-6351</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope" style="color:white"></span><span class="text">surasamoonsan@gmail.com</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope" style="color:white"></span><span class="text" >surasamoonsan@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
