--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@ position:absolute;
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p  style="color:#a68f8a">080-392-6351</p>
+	            <p  style="color:white; background-color:#a68f8a">080-392-6351</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
