--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@ position:absolute;
 							<li class="d-flex"><span>Zip code:</span> <span>11000</span></li>
 							<li class="d-flex"><span>Email:</span> <span>surasamoonsan@gmail.com</span></li>
 							<li class="d-flex"><span>Phone: </span> <span>080-392-6351</span></li>
+							<li class="d-flex"><span>Interested Position: </span> <span><u>1. Front End Developer (Prefer)</u><br>2. UX/UI Designer<br>3. Web Designer</span></li>
 							</ul>
 						</div>
 					</div>
@@ -762,7 +763,7 @@ position:absolute;
 
 	var typed = new Typed('#type', {
 	// Waits 1000ms after typing "First"
-	strings: ['Surasa.', 'A Web Designer.', 'A UX/UI Designer.'],
+	strings: ['Surasa.', 'A Frontend Dev', 'UX/UI designer', 'Web Designer'],
 	smartBackSpace: true,
 	loop: true,
 	typeSpeed: 100,
