--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ position:absolute;
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-lg-6" style="height:45vh; padding-top: 4vh;">
-						<div style="background-color: rgba(255, 235, 205, 0.5); border:0.5em solid #a68f8a; border-radius:20px; padding:3em 0em;">
+						<div style="background-color: rgba(255, 235, 205, 0.5); border:5px solid #a68f8a; border-radius:20px; padding:3em 0em;">
 							<h5>&nbsp;&nbsp;&nbsp;&nbsp;<span style="padding: 4px 12px; background-color:#fc8395; color:white;">HELLO ! <span class="icon-heart" style="color:white"></span></span></h5>
 							<div class="heading-section">
 								<h2>&nbsp;&nbsp;&nbsp;I'm </h2>
@@ -639,6 +639,33 @@ position:absolute;
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<h5 style="text-align:center;"><a href="https://drive.google.com/drive/folders/1mKJ3TyAPNvYB4H5TLtn0q4j_tpeiUV3i?usp=sharing" target="_blank" style="color:#fc8395; text-decoration:underline;">Click this link to see more picture  </a></h5>
 				</div>
+				<div class="col-md-12 animate-box" style="padding: 1.5em 0em;">
+					<div class="ftco-animate">
+						<h5 style="margin-bottom: 0em; color:#562F26"><i class="icon-play" style="font-size: 1em;"></i> Other Skills : other skills that advantage for job</h5> 
+					</div>
+				</div>
+				<div class="col-sm animate-box">
+					<div class="ftco-animate">
+						<div><h5><u>Strong</u></h5></div>
+						  <span style="color:#562F26"">Communications </span><br>
+						  <span><i class="icon-check"></i> Effective listening for Gathering user requirement</span><br>
+						  <span><i class="icon-check"></i> Documentation And Writing Skills</span><br>
+						  <span><i class="icon-check"></i> Presentation skills</span><br><br>
+
+						  <span style="color:#562F26"">Social </span><br>
+						  <span><i class="icon-check"></i> Team player </span><br>
+						  <span><i class="icon-check"></i> Open-minded </span><br>
+						  <span><i class="icon-check"></i> Result-oriented </span><br>
+						  <span><i class="icon-check"></i> Selflessness</span><br><br>
+					</div>
+				  </div>
+				  <div class="col-sm animate-box">
+					<div class="ftco-animate">
+						<div><h5><u>Basic Need to develop </u></h5></div>
+						  <span><i class="icon-wrench"></i> Responsive website programming</span><br>
+						  <span><i class="icon-wrench"></i> Mobile application programming</span>
+					</div>
+				  </div>
 			</div>
 		</div>
 	</section>  
