--- a/index.html
+++ b/index.html
@@ -744,8 +744,8 @@ position:absolute;
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker" style="color:white"></span><span class="text">บ้านเลขที่ 172 หมู่2 ซอยนนทบุรี2 ตำบลสวนใหญ่ อำเภอเมืองนนทบุรี จังหวัดนนทบุรี 11000</span></li>
-	                <li><a href="#"><span class="icon icon-phone" style="color:white"></span><span class="text">080-392-6351</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope" style="color:white"></span><span class="text" >surasamoonsan@gmail.com</span></a></li>
+	                <li><span class="icon icon-phone" style="color:white"></span><span class="text">080-392-6351</span></li>
+	                <li><span class="icon icon-envelope" style="color:white"></span><span class="text" >surasamoonsan@gmail.com</span></li>
 	              </ul>
 	            </div>
             </div>
