--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ position:absolute;
 						<div class="col-md-12 heading-section ftco-animate">
 							<h1 class="big">About</h1>
 							<h2 class="mb-4">About Me</h2>
-							<h5>2 years experienced as a website interface designer.<br>I can design the phototype and also coding the website.</h5>
+							<h5>2 years experienced as a website interface designer.<br>I can design the website phototype and also code the interface of the website.</h5>
 							<ul class="about-info mt-4 px-md-0 px-2">
 							<li class="d-flex"><span>Name:</span> <span>Surasa Moonsan</span></li>
 							<li class="d-flex"><span>Date of birth:</span> <span>December 29, 1994 (27 years old)</span></li>
