--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@ position:absolute;
 
 	var typed = new Typed('#type', {
 	// Waits 1000ms after typing "First"
-	strings: ['Surasa.', 'A Frontend Dev', 'UX/UI Designer', 'Software Tester'],
+	strings: ['Surasa.', 'UX/UI Designer', 'Software Tester'],
 	smartBackSpace: true,
 	loop: true,
 	typeSpeed: 100,
