--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ position:absolute;
 							<li class="d-flex"><span>Zip code:</span> <span>11000</span></li>
 							<li class="d-flex"><span>Email:</span> <span>surasamoonsan@gmail.com</span></li>
 							<li class="d-flex"><span>Phone: </span> <span>080-392-6351</span></li>
-							<li class="d-flex"><span>Interested Position: </span> <span><u>1. Front End Developer (Prefer)</u><br>2. UX/UI Designer<br>3. Software Tester</span></li>
+							<li class="d-flex"><span>Interested Position: </span> <span><u>1. UX/UI Designer (Prefer)</u><br>2. Software Tester</span></li>
 							</ul>
 						</div>
 					</div>
